RESOLVED FIXED226608
REGRESSION (Safari 14): Menu items jump around on codelearn.cat
https://bugs.webkit.org/show_bug.cgi?id=226608
Summary REGRESSION (Safari 14): Menu items jump around on codelearn.cat
Simon Fraser (smfr)
Reported 2021-06-03 15:57:59 PDT
REGRESSION (Safari 14): Menu items jump around on codelearn.cat
Attachments
Patch (6.90 KB, patch)
2021-06-03 16:00 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2021-06-03 16:00:24 PDT
Simon Fraser (smfr)
Comment 2 2021-06-03 16:00:27 PDT
Cameron McCormack (:heycam)
Comment 3 2021-06-03 16:11:27 PDT
Comment on attachment 430510 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430510&action=review > Source/WebCore/ChangeLog:14 > + because the newly create clipping layer changes the offset for the child layers. "newly created"
Simon Fraser (smfr)
Comment 4 2021-06-03 20:15:44 PDT
Note You need to log in before you can comment on or make changes to this bug.